--- a/FrontEnd/www/css/state_ui.css
+++ b/FrontEnd/www/css/state_ui.css
@@ -2,11 +2,9 @@
     opacity: 0;
     z-index: -1;
     
-    text-decoration: none;
-    
-   
-    
+    text-decoration: none;   
 }
+
 
 .state-label{
     padding: 2px 4px;
@@ -28,12 +26,10 @@
     left: 42.5%;
     margin: auto;
     text-align: center;
-  
-   
 }
 
 .state-buttons{
-    font-size: 8px;
+    font-size: 16px;
     display: inline-block;
     width: 50%;
     height:5%;
@@ -41,19 +37,25 @@
     background-color: #fff;
 }
 
-
-
 #state-left-button{
+    border: 1px solid #ddd;
     border-top-left-radius: 5px;
     border-bottom-left-radius: 5px;
-    border: 1px solid #ddd;
     
 }
 
 #state-right-button{
-     border: 1px solid #ddd;
+    border: 1px solid #ddd;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
 
-
+#state-exit-button{
+    background-color: red;
+    position: fixed;
+    top: 10%;
+    right: 15%;
+    border: 1px solid #FFF;
+    border-radius: 50px;
+    
+}
