--- a/FrontEnd/www/css/state_ui.css
+++ b/FrontEnd/www/css/state_ui.css
@@ -1,12 +1,11 @@
 .state-ui{
     opacity: 0;
-    z-index: -1;
-    
+    z-index: 1;
     text-decoration: none;   
 }
 
 
-.state-label{
+.label{
     padding: 2px 4px;
     position: fixed;
     top:20%;
@@ -35,6 +34,7 @@
     height:5%;
     padding: 1px 1px;
     background-color: #fff;
+    color: red;
 }
 
 #state-left-button{
