--- a/FrontEnd/www/css/congressional_ui.css
+++ b/FrontEnd/www/css/congressional_ui.css
@@ -13,24 +13,18 @@ html {box-sizing: border-box;}
 
 svg {display: block;}
 
-.heading {
-	background: #282828;
-	text-align: center;
+.congressional-label{
+    padding: 2px 4px;
+    position: fixed;
+    top:20%;
+    left:45%;
+    border-style: solid;
+    border-width: .5px;
+    color: red;
+    background-color: #212121;
+    font-size: 12px;
 }
 
-.heading h1 {
-	font-size: 28px;
-	font-weight: 600;
-	margin: 0;
-	padding: 24px 0 6px;
-}
-
-.heading h2 {
-	font-size: 16px;
-	font-weight: 300;
-	margin: 0;
-	padding: 6px 0 30px;
-}
 
 .main {
 	background: #00A287;
@@ -54,6 +48,7 @@ svg {display: block;}
 	bottom: 0;
 	width: 100%;
 	padding: 20px;
+    text-align:center;
 }
 
 /* hidden */
@@ -67,12 +62,12 @@ svg {display: block;}
 
 .cart-drawer-pushtoleft { bottom: 300px; }
 
-.cart-drawer, .cart-drawer-push {
+/* .cart-drawer, .cart-drawer-push {
 	-webkit-transition: all 0.5s ease;
 	-moz-transition: all 0.5s ease;
 	transition: all 0.5s ease;
 }
-
+ */
 .cart-btn {
 	cursor: pointer;
 	display: inline-block;
@@ -83,8 +78,9 @@ svg {display: block;}
 	cursor: pointer;
 	position: absolute;
 	top: 10px;
-	right: 50%;
-    
+    font-size:200%;
+    width: 100%;
+    height: 100%;
 }
 
 .arrow-icon {
