--- a/FrontEnd/www/css/state_ui.css
+++ b/FrontEnd/www/css/state_ui.css
@@ -1,11 +1,11 @@
 .state-ui{
     opacity: 0;
-    z-index: 1;
+    z-index: -1;
     text-decoration: none;   
 }
 
 
-.label{
+.state-label{
     padding: 2px 4px;
     position: fixed;
     top:20%;
@@ -50,7 +50,10 @@
     border-bottom-right-radius: 5px;
 }
 
-#state-exit-button{
+
+
+.state-exit-button{
+    opacity: 0;
     background-color: red;
     position: fixed;
     top: 10%;
