--- a/FrontEnd/www/css/congressional_ui.css
+++ b/FrontEnd/www/css/congressional_ui.css
@@ -47,7 +47,6 @@ svg {display: block;}
 	text-align: center;
 	bottom: 0;
 	width: 100%;
-	padding: 20px;
     text-align:center;
 }
 
@@ -76,15 +75,19 @@ svg {display: block;}
 
 .close-btn {
 	cursor: pointer;
-	position: absolute;
-	top: 10px;
-    font-size:200%;
+	position: relative;
     width: 100%;
     height: 100%;
+	padding: 10px;
 }
 
 .arrow-icon {
     position: absolute;
     right: 58px;
     top: 25px;
+}
+
+
+.vertical-menu-item{
+	display:block;
 }
