--- a/FrontEnd/www/css/congressional_ui.css
+++ b/FrontEnd/www/css/congressional_ui.css
@@ -47,7 +47,6 @@ svg {display: block;}
 	text-align: center;
 	bottom: 0;
 	width: 100%;
-	padding: 20px;
     text-align:center;
 }
 
@@ -76,15 +75,10 @@ svg {display: block;}
 
 .close-btn {
 	cursor: pointer;
-	position: absolute;
-	top: 10px;
-    font-size:200%;
+	/* position: static; Default */
+	top: 5px;
+    font-size:100%;
     width: 100%;
     height: 100%;
-}
-
-.arrow-icon {
-    position: absolute;
-    right: 58px;
-    top: 25px;
+    padding: 20px;
 }
