--- a/FrontEnd/www/css/user_interfaces/state_ui.css
+++ b/FrontEnd/www/css/user_interfaces/state_ui.css
@@ -8,7 +8,7 @@
 .state-label{
     padding: 2px 4px;
     position: fixed;
-    top:20%;
+    top:15%;
     left:45%;
     border-style: solid;
     border-width: .5px;
@@ -62,3 +62,73 @@
     border-radius: 50px;
     
 }
+
+
+/* senator-divs */
+.senate-img-div{
+    position:fixed;
+    width: 8%;
+    top:20%;
+}
+
+
+
+.senate-img-div-left{
+    left: 20%;
+}
+
+.senate-img-div-right{
+    right: 20%;
+}
+
+
+.senator-img{
+    border-radius:50%;   
+    width: 100%;
+}
+
+.senator-img-label{
+    color: white;
+    text-decoration: none;
+    top: 30%;
+    width: 100%;
+    text-align:center;
+    display:block;
+}
+
+
+
+.senator-img-left-label{
+    right:20%;
+}
+
+.senator-img-right-label{
+    right:20%;
+}
+/* ------------------------- */
+
+
+/* governors */
+.governor-img-div{
+    position:fixed;
+    right: 50%;
+    top: 20%;
+    width: 8%;
+}
+
+.governor-img{
+    width: 100%;
+    border-radius: 50%;
+}
+
+.governor-img-label{
+    color: white;
+    text-decoration: none;
+    right:50%;
+    width:100%;
+    text-align: center;
+    display:block;
+    top: 15%;
+    
+}
+/* ------------------------- */
