--- a/FrontEnd/www/css/user_interfaces/profile/profile_body.css
+++ b/FrontEnd/www/css/user_interfaces/profile/profile_body.css
@@ -1,6 +1,5 @@
 .profile-body{
-    width: 100%; 
-    
+    width: 100%;     
 }
 
 .profile-stances-collapsible{
@@ -30,8 +29,8 @@
     background-color: #f1f1f1;
 }
 .topic-slide-container {
-  width: 100%; /* Width of the outside container */
-  text-align:center;
+   width: 100%; /* Width of the outside container */
+   text-align:center;
    background-image: linear-gradient(to right, blue, red);
    padding: 10px 0 10px 0;
    border-radius: 20px;
@@ -86,8 +85,8 @@
   border-radius: 50%; 
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background-size: 25px;
-  background: url('temp/alabama_us_senate/Richard_Shelby.png'); /*#4CAF50;  Green background */
+  background: url('./temp/alabama_us_senate/Richard_Shelby.png'); /*#4CAF50;  Green background */
+  background-size: 100%;
   cursor: pointer; /* Cursor on hover */
 }
 
@@ -97,7 +96,7 @@
   border-radius: 50%; 
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  background-size: 25px 25px;
-  background: url('../../temp/alabama_us_senate/Richard_Shelby.png');  /* #4CAF50; Green background */
+  background: url('./temp/alabama_us_senate/Richard_Shelby.png');  /* #4CAF50; Green background */
+  background-size: 100%;
   cursor: pointer; /* Cursor on hover */
 }
