Added button highlighting functionality and removed redundant map regeneration

--- a/FrontEnd/www/css/user_interfaces/profile/profile_body.css
+++ b/FrontEnd/www/css/user_interfaces/profile/profile_body.css
@@ -38,6 +38,7 @@
 
 .profile-stance-topic-title{
     text-align:center;
+    color: black;
 }
 
 
@@ -85,17 +86,17 @@
   border-radius: 50%; 
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  /* background: url('./temp/alabama_us_senate/Richard_Shelby.png'); /*#4CAF50;  Green background */ 
+  background: url('./temp/alabama_us_senate/Richard_Shelby.png'); /*#4CAF50;  Green background */ 
   background-size: 100%;
   cursor: pointer; /* Cursor on hover */
 }
 
-.topic-slider-background::-webkit-slider-thumb{
+/* .topic-slider-background::-webkit-slider-thumb{
     background: url('./temp/alabama_us_senate/Richard_Shelby.png');
 }
 .topic-slider-background::-moz-range-thumb{
     background: url('./temp/alabama_us_senate/Richard_Shelby.png');
-}
+} */
 
 .topic-slider::-moz-range-thumb {
     
@@ -103,7 +104,7 @@
   border-radius: 50%; 
   width: 25px; /* Set a specific slider handle width */
   height: 25px; /* Slider handle height */
-  /* background: url('./temp/alabama_us_senate/Richard_Shelby.png');  /* #4CAF50; Green background */ 
+  background: url('./temp/alabama_us_senate/Richard_Shelby.png');  /* #4CAF50; Green background  */
   background-size: 100%;
   cursor: pointer; /* Cursor on hover */
 }
