--- a/FrontEnd/www/css/user_interfaces/congressional_ui.css
+++ b/FrontEnd/www/css/user_interfaces/congressional_ui.css
@@ -16,7 +16,7 @@ svg {display: block;}
 .congressional-label{
     padding: 2px 4px;
     position: fixed;
-    top:20%;
+    top:16%;
     left:45%;
     border-style: solid;
     border-width: .5px;
@@ -25,7 +25,6 @@ svg {display: block;}
     font-size: 12px;
 }
 
-
 .main {
 	background: #00A287;
 	padding: 20px 20px 20px;
@@ -33,23 +32,18 @@ svg {display: block;}
 	text-align: right;
 }
 
-
-
-
-
 .congressional-ui{
     opacity: 0;
     z-index: -1;
     text-decoration: none;   
 }
 
-
 .congressional-button-container{
     position: fixed;
     display: flex;
     bottom: 20%;
-    width: 15%;
-    left: 42.5%;
+    width: 30%;
+    left: 35.5%;
     margin: auto;
     text-align: center;
 }
@@ -62,6 +56,11 @@ svg {display: block;}
     padding: 1px 1px;
     background-color: #fff;
     color: red;
+}
+
+.congressional-buttons-active{
+    background-color:#2a1717;
+    border: 1px solid #5f5353;
 }
 
 #congressional-left-button{
@@ -77,8 +76,6 @@ svg {display: block;}
     border-bottom-right-radius: 5px;
 }
 
-
-
 .congressional-exit-button{
     opacity: 0;
     background-color: red;
@@ -86,11 +83,8 @@ svg {display: block;}
     top: 10%;
     right: 15%;
     border: 1px solid #FFF;
-    border-radius: 50px;
-    
+    border-radius: 50px;    
 }
-
-
 
 /* state-politician-divs */
 .state-politician-img-div{
@@ -99,7 +93,6 @@ svg {display: block;}
     top:20%;
     left: 50%;
 }
-
 
 .state-politician-img{
     border-radius:50%;   
@@ -115,4 +108,3 @@ svg {display: block;}
     display:block;
     left: 50%;
 }
-
