--- a/FrontEnd/www/css/user_interfaces/state_ui.css
+++ b/FrontEnd/www/css/user_interfaces/state_ui.css
@@ -21,8 +21,8 @@
     position: fixed;
     display: flex;
     bottom: 20%;
-    width: 15%;
-    left: 42.5%;
+    width: 60%;
+    left: 20%;
     margin: auto;
     text-align: center;
 }
@@ -30,7 +30,7 @@
 .state-buttons{
     font-size: 16px;
     display: inline-block;
-    width: 50%;
+    width: 100%;
     height:5%;
     padding: 1px 1px;
     background-color: #fff;
@@ -39,9 +39,7 @@
 
 #state-left-button{
     border: 1px solid #ddd;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    
+    border-radius: 5px;    
 }
 
 #state-right-button{
