Fixed state/congressional list layout and added perceived stance toggling

--- a/FrontEnd/www/css/user_interfaces/congressional_ui.css
+++ b/FrontEnd/www/css/user_interfaces/congressional_ui.css
@@ -2,7 +2,7 @@
 body { 
 	background-color: #f0f0f0; 
 	color: white;
-	font-family:'Open Sans';
+	/* font-family:'Open Sans'; */
 	line-height: 1;
 	margin: 0;
 }
