--- a/FrontEnd/www/css/user_interfaces/profile_ui.css
+++ b/FrontEnd/www/css/user_interfaces/profile_ui.css
@@ -1,4 +1,4 @@
-/* .vertical-menu {
+.vertical-menu {
   width: 100%;
   height: 90%;
   overflow-y: auto;
@@ -22,4 +22,3 @@
   color: white;
 }
 
- */
