--- a/FrontEnd/poly_app/www/css/user_interfaces/congressional_ui.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/congressional_ui.css
@@ -1,7 +1,7 @@
 
 body { 
 	background-color: #f0f0f0; 
-	color: white;
+	/* color: white; */
 	/* font-family:'Open Sans'; */
 	line-height: 1;
 	margin: 0;
