--- a/FrontEnd/poly_app/www/css/user_interfaces/congressional_ui.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/congressional_ui.css
@@ -17,12 +17,14 @@ svg {display: block;}
     padding: 2px 4px;
     position: fixed;
     top:16%;
-    left:45%;
+    width: 60%;
+    left:20%;
     border-style: solid;
     border-width: .5px;
     color: red;
     background-color: #212121;
     font-size: 12px;
+    text-align: center;
 }
 
 .main {
@@ -40,23 +42,26 @@ svg {display: block;}
 
 .congressional-button-container{
     position: fixed;
-    display: flex;
+    /* display: flex; */
+    display: table;
     bottom: 20%;
-    width: 30%;
-    left: 35.5%;
+    width: 100%;
+    left: 0%;
     margin: auto;
     text-align: center;
 }
 
 .congressional-buttons{
     font-size: 16px;
-    display: inline-block;
-    width: 33%;
-    height:5%;
+    display: table-cell;
+    width: 32%;
+    height:40px;
     padding: 1px 1px;
     background-color: #fff;
     color: red;
     border: 1px solid #ddd;
+    vertical-align: middle;
+    
 }
 
 .congressional-buttons-active{
@@ -71,9 +76,6 @@ svg {display: block;}
     
 }
 
-#congressional-left-button{
-      /* border: 1px solid #ddd; */
-}
 
 
 #congressional-right-button{
@@ -82,22 +84,40 @@ svg {display: block;}
     border-bottom-right-radius: 5px;
 }
 
+/* .state-exit-button{
+    
+    opacity: 0;
+    background-color: red;
+    position: fixed;
+    top: 10%;
+    right: 15%;
+    width: 20%;
+    border: 1px solid #FFF; 
+    border: 1px solid #000;
+    border-radius: 50px;
+    text-align : center;
+    
+} */
+
+
 .congressional-exit-button{
     opacity: 0;
     background-color: red;
     position: fixed;
     top: 10%;
     right: 15%;
-    border: 1px solid #FFF;
+    width: 20%;
+    border: 1px solid #000;
     border-radius: 50px;    
+    text-align : center;
 }
 
 /* state-politician-divs */
 .state-politician-img-div{
     position:fixed;
-    width: 8%;
+    width: 18%;
     top:20%;
-    left: 50%;
+    left: 41%;
 }
 
 .state-politician-img{
