--- a/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body.css
@@ -15,6 +15,8 @@
       text-align: left;
       outline: none;
       font-size: 22px;
+      box-shadow: 0px 0px 2px gray;
+      background: #ffffd4;
 
 }
 
