Added flags to the state UI layout

--- a/FrontEnd/poly_app/www/css/user_interfaces/maps/us_map.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/maps/us_map.css
@@ -38,8 +38,12 @@ svg rect {
 
 
 
-.state-selected{
+/* .state-selected{
     fill: blue;
+} */
+
+.state-republicans{
+    fill: url(#republicans);
 }
 
 /* .state-unselected{   
