--- a/FrontEnd/poly_app/www/css/user_interfaces/state_ui.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/state_ui.css
@@ -4,15 +4,19 @@
     text-decoration: none;   
 }
 
+.state-flag-img-container{
+    position: fixed;
+    width: 100%;
+    top: 8%;
+}
+
 
 .state-label{
     padding: 2px 4px;
     position: fixed;
-    top:15%;
+    top:8%;
     width: 60%;
-    
     left:20%;
-    
     border-style: solid;
     border-width: .5px;
     color: red;
@@ -60,9 +64,10 @@
     opacity: 0;
     background-color: red;
     position: fixed;
-    top: 10%;
-    right: 15%;
-    width: 20%;
+    /* top: 10%; */
+    bottom: 13%;
+    right: 2%;
+    width: 34%;
     /* border: 1px solid #FFF; */
     border: 1px solid #000;
     border-radius: 50px;
@@ -81,11 +86,11 @@
 
 
 .senate-img-div-left{
-    left: 20%;
+    left: 8%;
 }
 
 .senate-img-div-right{
-    right: 20%;
+    right: 8%;
 }
 
 
@@ -101,6 +106,11 @@
     width: 100%;
     text-align:center;
     display:block;
+    background: #212121;
+    color: red;
+    border-width: .5px;
+    border-style: solid;
+    
 }
 
 
