--- a/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body.css
@@ -6,7 +6,7 @@
 }
 
 
-.profile-subject-collapsible-container{
+.profile-subject-tab-container{
       background-color: #eee;
       color: #444;
       cursor: pointer;
@@ -14,13 +14,15 @@
       /* border: none; */
       text-align: left;
       outline: none;
-      font-size: 22px;
+      font-size: 11px;
       box-shadow: 0px 0px 2px gray;
       background: #ffffd4;
+      display:inline-block;
+      width:32%;
 
 }
 
-.profile-subject-collapsible{
+.profile-subject-tab{
       display: inline-block;
       width: 73%;
       padding-top: 5px;
@@ -28,15 +30,15 @@
       padding-bottom: 5px;
 }
 
-.profile-subject-collapsible-text{
+.profile-subject-tab-text{
     display: inline-block;
 }
 
-.profile-subject-collapsible-img-div{
+.profile-subject-tab-img-div{
     display: inline-block;
 }
 
-.profile-subject-collapsible-img{
+.profile-subject-tab-img{
     width: auto;
     height: 5vh;
     
