--- a/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_header.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_header.css
@@ -2,16 +2,16 @@
     position:relative;
     width: 100%;  
     top: 9%;
-    height: 51%;
+    height: 32%;
     /* border: 1px solid #ccc; */
     /* border-radius: 16px;  */
 }
 
 .profile-picture-container {
     position: absolute;
-    top: 34%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 3%;
+    left: 60%;
+    /* transform: translate(-50%, -50%); */
     
 }
         
@@ -24,7 +24,7 @@
     background-color: #fff;
     height: 50%;
     width: 100%;
-    height: 93%;
+    height: 100%;
     position: absolute;
     z-index: -100;
     box-shadow: 0px 1px 5px gray;
@@ -32,33 +32,24 @@
 
 
 
-.profile-donate-container{
-    display: inline-block;
-    margin: 10px;
-    /* float: right; */
-    cursor: pointer;
-    text-align: center;
-    position: absolute;
-    right:5%;
+/* .profile-donate-container{ */
+    /* display: inline-block; */
+    /* margin: 10px; */
+    /* /* float: right; */ */
     
-}
-
-.profile-donate-img{
-    width: 30px;
-    height: auto;
     
-}
+    /* position: absolute; */
+    /* right:5%; */
+    
+/* } */
 
-.profile-donate-text{
-    background: white;
-}
 
 
 .profile-name-position-container{
     position: absolute;
-    bottom: 10%;
+    top: 4%;
+    left: 4%;
     width: 100%;
-    
 }
 
 
@@ -73,9 +64,35 @@
 }
 
 .profile-header-social-media-container{
+    position: absolute;
     display: inline-block;
-    width: 30%;
+    left: 0%;
+    bottom: 4%;
+    width: 47%;
     text-align: right;
+}
+
+.profile-donate-container{
+    display: inline-block;
+    vertical-align: top; /*used to make adjacent icons consistent with donate icon */
+    cursor: pointer;
+    
+}
+.profile-header-donate-img-div{
+    text-align: center;
+}
+
+.profile-donate-img{
+    width: auto;
+
+    height: 5vh;
+    /* used to center image in the block */
+    display:block;
+    margin: auto;
+}
+
+.profile-donate-text{
+    background: white;
 }
 
 .profile-header-facebook-img-div{
