Added bill cards to the GUI

--- a/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body_stances.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body_stances.css
@@ -162,7 +162,7 @@
 }
 
 
-.topic-source-list-item-title-header {
+.topic-source-list-bill-title-header {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	padding: 10px;
 	font-weight:bold;
@@ -177,7 +177,7 @@
 
 
 
-.topic-source-list-item-vote-header{
+.topic-source-list-bill-vote-header{
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	padding: 10px;
 	font-weight:bold;
@@ -187,7 +187,7 @@
 	width: 59%;
 }
 
-.topic-source-list-item{
+.topic-source-list-bill{
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	/* padding: 10px; */
 	/* margin: 10px; */
@@ -195,7 +195,7 @@
 	
 }
 
-.topic-source-list-item-title {
+.topic-source-list-bill-title {
 	
 	/* border-bottom-left-radius: 10px; */
 	/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
@@ -207,7 +207,7 @@
 	display: inline-block;
 }
 
-.topic-source-list-item-vote {
+.topic-source-list-bill-vote {
 	
 	/* border-bottom-left-radius: 10px; */
 	/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
@@ -218,14 +218,16 @@
 	display: inline-block;
 	
 }
-.topic-source-list-item-analysis{
+.topic-source-list-bill-analysis{
 	/* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
 	
 	padding: 10px;
 	background: #fbe467;
-
+	
+	border-top: 1px solid #bfbfbf;
 }
-.topic-source-list-item-expand{
+
+.topic-source-list-bill-expand-tab{
 
 	border-bottom-right-radius: 10px;
 	border-bottom-left-radius: 10px;
@@ -234,8 +236,20 @@
 	padding-left: 10px;
 	padding-top: 5px;
 	padding-bottom: 5px;
+	
+	border-top: 1px dotted #bfbfbf;
+	
 	/* background: #fbe467; */
 }
+
+.topic-source-list-bill-details{
+	display: none;	
+}
+
+.topic-source-list-bill-details.active{
+	display: block;	
+}
+
 
 .topic-perceived-stance{
     cursor: pointer;
