Modified css to get rid of width bug

--- a/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_container.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_container.css
@@ -5,6 +5,10 @@
 .profile-page{
     height: 90%;
     overflow-y:scroll;
+
     /* top: 8%; */
     position: sticky;
 }
+
+
+    /* overflow-x:hidden; */
