--- a/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body_stances.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_body_stances.css
@@ -166,9 +166,8 @@
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	padding: 10px;
 	font-weight:bold;
-	border-top-left-radius: 10px;
 	display: inline-block;
-	margin-right: -4px;
+	/* margin-right: -4px; */
 	width: 47%;
 	border-right: 1px solid rgba(0, 0, 0, 0.2);
 }
@@ -179,9 +178,10 @@
 	padding: 10px;
 	font-weight:bold;
 	display: inline-block;
-	/* margin-right: -3px; */
+	margin-right: -4px;
 	width: 32%;
 	border-right: 1px solid rgba(0, 0, 0, 0.2);
+	border-top-left-radius: 10px;
 }
 
 
@@ -204,12 +204,24 @@
 	margin-bottom: 10px;
 	margin-top: 10px;
 	border-radius: 10px;
-	
 }
+
+
+.topic-source-list-bill.stand-out{
+	/* box-shadow: 0 4px 8px 0 rgba(187, 187, 0, 0.2), 0 6px 20px 0 rgba(187, 187, 0, 0.19); */
+	box-shadow: 0 4px 8px 0 rgb(230, 136, 37), 0 6px 20px 0 rgba(187, 33, 0, 0.89)
+}
+
+.topic-source-list-bill-number-vote-container{
+	height: 30px;
+	border-bottom: 1px dotted #bfbfbf;
+}
+
+
 
 .topic-source-list-bill-title{
 	padding: 10px;
-	border-top: 1px solid #bfbfbf;
+	/* border-top: 1px solid #bfbfbf; */
 }
 
 
@@ -219,7 +231,10 @@
 
 .topic-source-list-bill-vote{
 
-	padding: 10px;
+	padding-top: 8px;
+	padding-bottom: 8px;
+	height: 100%;
+	text-align: center;
 	width: 21%;	
 	display: inline-block;
 	border-top-right-radius: 10px;
@@ -235,6 +250,7 @@
 }
 
 .topic-source-list-bill-vote.Did-Not-Vote{
+	font-size: 2vh;
 	background: Yellow;
 }
 
@@ -246,6 +262,7 @@
 	padding-top: 5px;
 	padding-bottom: 5px;
 	color: blue;
+	border-bottom: 1px dotted #bfbfbf;
 }
 
 .topic-source-list-bill-analysis-tab.active{
@@ -276,7 +293,7 @@
 	padding-top: 5px;
 	padding-bottom: 5px;
 	
-	border-top: 1px dotted #bfbfbf;
+	/* border-top: 1px dotted #bfbfbf; */
 	
 	color: blue;
 }
@@ -294,18 +311,22 @@
 }
 
 .topic-source-list-bill-date-introduced{	
-	
+	text-align: center;
 	border-right: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 10px;
+	padding-bottom: 8px;
+	padding-top: 8px;
+	height: 100%;
 	width: 47%;
 	margin-right: -3px;
 	display: inline-block;
 }
 
 .topic-source-list-bill-number{	
-	
+	text-align: center;
 	border-right: 1px solid rgba(0, 0, 0, 0.2);
-	padding: 10px;
+	padding-top: 8px;	
+	padding-bottom: 8px;	
+	height: 100%;
 	width: 32%;
 	margin-right: -3px;
 	display: inline-block;
