Added immigration and labor union categories

--- a/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_header.css
+++ b/FrontEnd/poly_app/www/css/user_interfaces/profile/profile_header.css
@@ -43,7 +43,8 @@
 
 .profile-name{
     /* padding-left: 6px; */
-    font: 7vw Arial;
+    /* font: 7vw Arial; */
+    font: 4vh Arial;
     color: black;
     display: inline-block;
     width: 67%;
